# safs-v6-smartcast-autonomous-fix

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
infra/kubernetes/: code-index-indexer.yaml  code-index-mcp.yaml  code-index-pvc.yaml  postgres.yaml  qdrant.yaml  redis.yaml  safs-configmap.yaml  safs-deployment.yaml  safs-service.yaml
mcp_config/: safs_mcp.json
src/safs/: __init__.py  cli.py  config.py  mcp_client.py
src/safs/agents/: __init__.py  confidence_ensemble.py  fix_generator.py  orchestrator.py  pr_creator.py  prompts.py  repo_locator.py  self_healing.py
src/safs/companion_lib/: __init__.py  dynamic_resolver.py  version_matrix.py
src/safs/context/: __init__.py  chunk_merger.py  context_analyzer.py  context_builder.py  minhash_dedup.py  syntax_compressor.py  tfidf_scorer.py
src/safs/intake/: __init__.py  attachment_handler.py  jira_client.py  jira_webhook.py  keyword_extractor.py
src/safs/log_analysis/: __init__.py  anomaly_detector.py  bug_layer_router.py  cascading_detector.py  correlation_engine.py  drain_adapter.py  error_patterns.py  incident_detector.py  log_utils.py  models.py  quality_gate.py  settings_analyzer.py  timestamp_extractor.py
src/safs/log_intelligence/: __init__.py  agent.py  cdp_parser.py  loki_symbolicator.py  mediatek_parser.py  models.py  poc_adapters.py  standalone_engines.py
src/safs/qdrant_collections/: __init__.py  collection_setup.py  correction_indexer.py  fix_indexer.py  institutional_memory.py  models.py
src/safs/reproduction/: __init__.py  agent.py  device_resolver.py  models.py
src/safs/retrieval/: __init__.py  circuit_breaker.py  code_index_mcp_client.py  github_mcp_client.py  rate_limiter.py  repository_adapter.py  retrieval_router.py  temporal_ranker.py
src/safs/root_cause_analysis/: __init__.py  agent.py  llm_client.py  prompts.py
src/safs/symbol_store/: __init__.py  elf_symbolication.py  source_map_decoder.py  store.py
src/safs/symbolication/: __init__.py  loki_symbolicator.py
src/safs/telemetry/: __init__.py  models.py  proactive_monitor.py  regression_correlator.py  regression_test_generator.py  telemetry_client.py
src/safs/validation/: __init__.py  companion_mock.py  drm_tester.py  models.py  multi_chipset_validator.py  on_device_validator.py  playwright_validator.py  qemu_validator.py  tri_path_validator.py
tests/: conftest.py
tests/e2e/: __init__.py  test_e2e_error_handling.py  test_e2e_with_fixtures.py
tests/fixtures/: README.md
tests/fixtures/cdp_traces/: companion_timing.json  shaka_3016.json
tests/fixtures/jira_payloads/: ticket_with_attachments.json  webhook_created.json
tests/fixtures/source_maps/: sample.js.map
tests/integration/: __init__.py  test_pipeline_cross_layer.py  test_pipeline_html5.py  test_pipeline_loki.py  test_pipeline_mediatek.py
tests/unit/: __init__.py  test_bug_layer_router.py  test_cli.py  test_companion_lib.py  test_confidence_ensemble.py  test_config.py  test_context.py  test_fix_generator.py  test_intake.py  test_log_analysis_engines.py  test_log_intelligence.py  test_mcp_client.py  test_models.py  test_orchestrator.py  test_pr_creator.py  test_qdrant_collections.py  test_qdrant_write.py  test_quality_gate.py  test_reproduction.py  test_retrieval.py  test_root_cause_analysis.py  test_symbol_store.py  test_telemetry.py  test_validation.py
toolchain/: arm-linux-gnueabi-current.cmake  arm-linux-gnueabi-legacy.cmake
