[project]
name = "safs-vizio-v6"
version = "6.0.0"
description = "SAFS v6.0 - SmartCast Autonomous Fix System for Vizio Smart TVs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Vizio SAFS Team", email = "safs@vizio.com"}
]
keywords = [
    "safs", "vizio", "smartcast", "autonomous-fix", "jira", 
    "log-analysis", "smart-tv", "mcp", "langgraph", "claude"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # === CORE FRAMEWORK ===
    "langgraph>=0.2.0",           # Pipeline orchestration
    "anthropic>=0.18.0",          # Claude Opus 4/Haiku/Sonnet
    "pydantic-settings>=2.0.0",   # BaseSettings (moved from pydantic v2)
    "drain3>=0.9.11",             # DRAIN algorithm for log template clustering
    
    # === MCP FRAMEWORK ===
    "mcp[cli]>=1.9.1",            # MCP SDK for vizio-mcp integration
    
    # === JIRA INTEGRATION (ported from POCs) ===
    "jira[cli]>=3.10.0",          # JIRA REST API client
    "atlassian-python-api>=4.0.0", # Additional Atlassian APIs
    
    # === ASYNC WEB & HTTP ===
    "httpx>=0.27.0",              # Async HTTP with connection pooling
    "aiohttp>=3.12.0",            # Alternative async HTTP client
    "requests>=2.31.0",           # Sync HTTP (fallback)
    
    # === LOG ANALYSIS (ported from POC) ===
    "scikit-learn>=1.3.0",        # TF-IDF scoring
    "datasketch>=1.6.0",          # MinHash deduplication
    "nltk>=3.8.0",                # NLP for keyword extraction
    
    # === DATA & PARSING ===
    "pydantic>=2.0.0",            # Data models & validation
    "pyyaml>=6.0.0",              # YAML config parsing
    "python-dateutil>=2.8.0",     # Timestamp parsing
    "dacite>=1.9.0",              # Dataclass utilities
    
    # === VECTOR DATABASE (Qdrant) ===
    "qdrant-client>=1.7.0",       # Qdrant Python SDK
    "voyageai>=0.2.0",            # voyage-code-3 embeddings
    
    # === DATABASE ===
    "asyncpg>=0.29.0",            # PostgreSQL async driver
    "redis>=5.0.0",               # Redis for pipeline state
    
    # === GITHUB/GITLAB INTEGRATION ===
    "PyGithub>=2.1.1",            # GitHub API (ported from POC)
    "gitpython>=3.1.40",          # Git operations
    "python-gitlab>=4.0.0",       # GitLab API
    
    # === HTML/TEMPLATE ===
    "jinja2>=3.1.0",              # Template rendering
    "bleach>=6.0.0",              # HTML sanitization
    "markupsafe>=2.1.0",          # Safe markup
    
    # === UTILITIES ===
    "python-dotenv>=1.0.0",       # Environment variables
    "rich>=13.0.0",               # Terminal formatting
    "typer>=0.9.0",               # CLI framework
    "loguru>=0.7.0",              # Better logging
    
    # === SSH/DEVICE (for on-device validation) ===
    "asyncssh>=2.14.0",           # SSH to Vizio TVs
    
    # === TESTING/VALIDATION ===
    "playwright>=1.40.0",         # Browser automation (PATH β)
]

[project.optional-dependencies]
dev = [
    # === TESTING ===
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",        # Parallel testing
    "pytest-timeout>=2.2.0",
    
    # === CODE QUALITY ===
    "black>=23.0.0",              # Code formatting
    "ruff>=0.1.0",                # Fast linter
    "mypy>=1.7.0",                # Type checking
    "bandit>=1.7.5",              # Security scanning
    
    # === OBSERVABILITY ===
    "langfuse>=2.0.0",            # LLM observability
    "prometheus-client>=0.19.0",  # Metrics export
]

kubernetes = [
    # === KUBERNETES DEPLOYMENT ===
    "kubernetes>=28.0.0",         # K8s Python client
    "kubernetes-asyncio>=28.0.0", # Async K8s client
]

build = [
    # === BUILD/PACKAGE ===
    "build>=1.0.0",
    "wheel>=0.42.0",
    "setuptools>=69.0.0",
]

[project.scripts]
safs = "safs.cli:app"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/safs",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "requires_tv: marks tests that require a physical TV",
    "requires_llm: marks tests that require LLM API access",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/test_*.py",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
